--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,30 @@
             position: fixed; width: 100%; height: 100%;
             -webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: transparent;
         }
+        .game-controls {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    gap: 15px;
+    z-index: 100;
+}
+.game-controls button {
+    background: rgba(0, 255, 255, 0.1);
+    border: 1px solid #0ff;
+    color: #0ff;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 5px;
+    backdrop-filter: blur(5px);
+    transition: 0.3s;
+}
+.game-controls button:hover {
+    background: rgba(0, 255, 255, 0.3);
+    box-shadow: 0 0 15px #0ff;
+}
+
         #gameCanvas { display: block; width: 100vw; height: 100vh; image-rendering: pixelated; touch-action: none; }
         .ui-layer {
             position: absolute; top: 0; width: 100%; text-align: center;
@@ -46,9 +70,36 @@
         <div id="status">SNACK ATTACK INITIALIZED</div>
         <div id="recentMenu"></div>
     </div>
+    <div class="game-controls">
+    <button onclick="window.location.href='https://maximumreality.xyz'" title="Home">🏠</button>
+    <button id="muteBtn" onclick="toggleMute()" title="Mute">🔊</button>
+    <button id="pauseBtn" onclick="togglePause()" title="Pause">⏸️</button>
+</div>
+
     <canvas id="gameCanvas"></canvas>
 
 <script>
+    let isPaused = false;
+let isMuted = false;
+
+function toggleMute() {
+    isMuted = !isMuted;
+    music.muted = isMuted;
+    document.getElementById('muteBtn').innerText = isMuted ? "🔇" : "🔊";
+}
+
+function togglePause() {
+    if (gameState !== 'PLAYING') return; // Don't pause on start/gameover screens
+    isPaused = !isPaused;
+    document.getElementById('pauseBtn').innerText = isPaused ? "▶️" : "⏸️";
+    
+    if (isPaused) {
+        music.pause();
+    } else {
+        music.play().catch(() => {});
+    }
+}
+
     const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 const BASE_URL = "https://maximumreality.github.io/cyber-alley/";
@@ -259,7 +310,14 @@ function drawBackground() {
     }
 }
 
-function animate() {
+
+    function animate() {
+    if (isPaused) {
+        requestAnimationFrame(animate);
+        return; 
+    }
+    // ... rest of your existing animate code
+
     ctx.save();
     if (shake > 0) {
         ctx.translate((Math.random() - 0.5) * shake, (Math.random() - 0.5) * shake);
