--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Maximum Reality: Cyber Alley">
 <meta name="twitter:description" content="Neon cyberpunk arcade runner. Industrial synth. Snack chaos.">
-<meta name="twitter:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.PNG">
+<meta name="twitter:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
 
 <meta name="theme-color" content="#00ffff">
 
