--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Maximum Reality: Cyber Alley — a neon cyberpunk arcade runner with industrial synth vibes. Dodge debris, collect snacks, reboot shields, and survive the alley.">
-
+<link rel="apple-touch-icon" href="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
 <meta property="og:title" content="Maximum Reality: Cyber Alley">
 <meta property="og:description" content="A neon cyberpunk arcade runner with industrial synth vibes. Snack Attack Initialized.">
 <meta property="og:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
