--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <meta name="theme-color" content="#00ffff">
 
-<link rel="icon" href="https://maximumreality.github.io/cyber-alley/favicon.png" type="image/png">
+<link rel="icon" href="https://maximumreality.github.io/cyber-alley/favicon.jpg" type="image/jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Maximum Reality: Cyber Alley</title>
