--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Maximum Reality: Cyber Alley — a neon cyberpunk arcade runner with industrial synth vibes. Dodge debris, collect snacks, reboot shields, and survive the alley.">
-<link rel="apple-touch-icon" href="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
-<meta property="og:title" content="Maximum Reality: Cyber Alley">
-<meta property="og:description" content="A neon cyberpunk arcade runner with industrial synth vibes. Snack Attack Initialized.">
-<meta property="og:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
-<meta property="og:url" content="https://maximumreality.github.io/cyber-alley/">
-<meta property="og:type" content="website">
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Maximum Reality: Cyber Alley">
-<meta name="twitter:description" content="Neon cyberpunk arcade runner. Industrial synth. Snack chaos.">
-<meta name="twitter:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
-
-<meta name="theme-color" content="#00ffff">
-
-<link rel="icon" href="https://maximumreality.github.io/cyber-alley/favicon.jpg" type="image/jpg">
+    <!-- Primary Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <title>Maximum Reality: Cyber Alley</title>
+    <meta name="description" content="Maximum Reality: Cyber Alley — a neon cyberpunk arcade runner with industrial synth vibes. Dodge debris, collect snacks, reboot shields, and survive the alley.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maximumreality.github.io/cyber-alley/">
+    <meta property="og:title" content="Maximum Reality: Cyber Alley">
+    <meta property="og:description" content="A neon cyberpunk arcade runner with industrial synth vibes. Snack Attack Initialized.">
+    <meta property="og:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://maximumreality.github.io/cyber-alley/">
+    <meta name="twitter:title" content="Maximum Reality: Cyber Alley">
+    <meta name="twitter:description" content="Neon cyberpunk arcade runner. Industrial synth. Snack chaos.">
+    <meta name="twitter:image" content="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
+    <meta name="twitter:image:alt" content="Maximum Reality: Cyber Alley — neon cyberpunk arcade runner with snacks">
+
+    <!-- Favicon / Apple -->
+    <link rel="icon" href="https://maximumreality.github.io/cyber-alley/favicon.jpg" type="image/jpg">
+    <link rel="apple-touch-icon" href="https://maximumreality.github.io/cyber-alley/cyber-alley-og.png">
+    <meta name="theme-color" content="#00ffff">
+
     <style>
         body { 
             margin: 0; background: #000; overflow: hidden; font-family: 'Courier New', Courier, monospace;
