--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
     z-index: 100;
 }
 .game-controls button {
-    background: rgba(0, 255, 255, 0.1);
-    border: 1px solid #0ff;
+    background: rgba(0, 255, 255, 0.05); /* Even more transparent */
+    border: 1px solid rgba(0, 255, 255, 0.3);
     color: #0ff;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 20px;
-    border-radius: 5px;
-    backdrop-filter: blur(5px);
-    transition: 0.3s;
+    padding: 5px 10px; /* Slimmer profile */
+    font-size: 16px; /* Smaller icons */
+    border-radius: 3px;
+    backdrop-filter: blur(2px);
 }
+
 .game-controls button:hover {
     background: rgba(0, 255, 255, 0.3);
     box-shadow: 0 0 15px #0ff;
