--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <canvas id="gameCanvas"></canvas>
 
 <script>
-    let isPaused = false;
+let isPaused = false;
 let isMuted = false;
 
 function toggleMute() {
@@ -130,35 +130,21 @@ function toggleMute() {
 }
 
 function togglePause() {
-    if (gameState !== 'PLAYING') return; // Don't pause on start/gameover screens
+    if (gameState !== 'PLAYING') return;
     isPaused = !isPaused;
     document.getElementById('pauseBtn').innerText = isPaused ? "▶️" : "⏸️";
-    
-    if (isPaused) {
-        music.pause();
-    } else {
-        music.play().catch(() => {});
-    }
+    if (isPaused) music.pause(); else music.play().catch(() => {});
 }
 
-    const canvas = document.getElementById('gameCanvas');
+const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 const BASE_URL = "https://maximumreality.github.io/cyber-alley/";
 
 const biomes = {
-    night: {
-        bg: 'gg-bg.png',
-        buildings: ['building-a.png', 'building-b.png', 'building-c.png'],
-        overlay: "rgba(43, 0, 43, 1)"
-    },
-    day: {
-        bg: 'gg-bg.png', 
-        buildings: ['building-d.png', 'building-e.png', 'building-f.png'],
-        overlay: "rgba(135, 206, 235, 1)"
-    }
+    night: { bg: 'gg-bg.png', buildings: ['building-a.png', 'building-b.png', 'building-c.png'], overlay: "rgba(43, 0, 43, 1)" },
+    day: { bg: 'gg-bg.png', buildings: ['building-d.png', 'building-e.png', 'building-f.png'], overlay: "rgba(135, 206, 235, 1)" }
 };
 
-// --- CONFIG ---
 const CHAR_SIZE = 100;
 const GROUND_Y_POS = 120; 
 const gravity = 1.2;
@@ -181,31 +167,17 @@ let snackStreak = 0;
 let recentSnacks = [];
 let gameObjects = [];
 let shake = 0;
-let particles = []; // This holds our ✨ sparks
-// --- 🌌 STARFIELD DATA ---
+let particles = [];
+
 const stars = Array.from({ length: 80 }, () => ({
-    x: Math.random() * 2000, // Wide range for scrolling
-    y: Math.random() * 400,  // Keep them in the sky
+    x: Math.random() * 2000,
+    y: Math.random() * 400,
     size: Math.random() * 2,
     opacity: Math.random()
 }));
 
-// --- RESTORED FULL ASSET POOLS ---
-const obstaclePool = [
-    'dumpster.png', 'metal_trashcan.png', 'garbage-truck.png', 'overflowing-trashcan.png', 
-    'fish-bones.png', 'smashed-can.png', 'smashed-juice-box.png', 'smashed-soda-can.png',
-    'detergent.png', 'receipt.png', 'scrub_brush.png', 'toilet_paper.png', 
-    'hand_sanitiser.png', 'kitchen_soap.png', 'frying-pan.png'
-];
-
-const snackPool = [
-    'swiss-cheese.png', 'pizza-slice.png', 'pink-donut.png', 'cheeseburger.png', 
-    'roast-chicken.png', 'cupcake.png', 'banana.png', 'ham.png', 'bread-slice.png',
-    'bubble_gum.png', 'chicken_leg.png', 'chips.png', 'cookies.png', 'fried-egg.png',
-    'green_apple.png', 'hotdog.png', 'marshmallows.png', 'milk_chocolate.png',
-    'pancake_stack.png', 'popcorn.png', 'red_apple.png', 'sandwich.png', 
-    'strawberry-candy.png', 'watermelon-slice.png', 'tuna_can.png'
-];
+const obstaclePool = ['dumpster.png', 'metal_trashcan.png', 'garbage-truck.png', 'overflowing-trashcan.png', 'fish-bones.png', 'smashed-can.png', 'smashed-juice-box.png', 'smashed-soda-can.png', 'detergent.png', 'receipt.png', 'scrub_brush.png', 'toilet_paper.png', 'hand_sanitiser.png', 'kitchen_soap.png', 'frying-pan.png'];
+const snackPool = ['credit_card_1.png', 'swiss-cheese.png', 'pizza-slice.png', 'pink-donut.png', 'cheeseburger.png', 'roast-chicken.png', 'cupcake.png', 'banana.png', 'ham.png', 'bread-slice.png', 'bubble_gum.png', 'chicken_leg.png', 'chips.png', 'cookies.png', 'fried-egg.png', 'green_apple.png', 'hotdog.png', 'marshmallows.png', 'milk_chocolate.png', 'pancake_stack.png', 'popcorn.png', 'red_apple.png', 'sandwich.png', 'strawberry-candy.png', 'watermelon-slice.png', 'tuna_can.png'];
 
 const assets = {};
 const toLoad = ['gg-bg.png', 'building-a.png', 'building-b.png', 'building-c.png', 'building-d.png', 'building-e.png', 'building-f.png', 'floor.png', 'snack-portal.png'];
@@ -253,48 +225,38 @@ class GameObject {
         this.file = pool[Math.floor(Math.random() * pool.length)];
         this.img = new Image(); this.img.src = BASE_URL + this.file;
         this.x = canvas.width + 100; this.collected = false;
-
-        // --- RESTORED SPECIAL SIZING LOGIC ---
         if (this.file.includes('snack-portal')) { this.w = 150; this.h = 200; }
         else if (this.file.includes('truck')) { this.w = 180; this.h = 100; }
         else if (this.file.includes('dumpster')) { this.w = 120; this.h = 90; }
-        else if (this.file.includes('smashed-can')) { this.w = 40; this.h = 40; }
         else { this.w = 50; this.h = 50; }
-
         this.y = canvas.height - GROUND_Y_POS - this.h;
         if (type === 'snack' && !this.file.includes('portal')) { this.y -= (Math.random() > 0.5 ? 0 : 160); }
     }
     update() {
         this.x -= gameSpeed;
         const loriJumpY = canvas.height - GROUND_Y_POS - CHAR_SIZE - jumpHeight;
-        const groundY = canvas.height - GROUND_Y_POS - CHAR_SIZE;
-
         if (!this.collected && this.type === 'obstacle') {
             const loriHitX = lori.x + 35;
             if (loriHitX < this.x + this.w - 15 && loriHitX + 30 > this.x + 15 && loriJumpY + 85 > this.y + 10 && loriJumpY + 15 < this.y + this.h) {
-                if (hasQuantumShield) {
-                    hasQuantumShield = false; snackStreak = 0; this.collected = true; shake = 20;
-                    document.getElementById('status').innerText = "SHIELD BROKEN!";
-                } else { gameState = 'GAMEOVER'; music.pause(); }
+                if (hasQuantumShield) { hasQuantumShield = false; snackStreak = 0; this.collected = true; shake = 20; document.getElementById('status').innerText = "SHIELD BROKEN!"; }
+                else { gameState = 'GAMEOVER'; music.pause(); }
             }
         }
-
         if (!this.collected && this.type === 'snack') {
-            const targets = [{x: lori.x, y: loriJumpY}, {x: azul.x, y: loriJumpY}, {x: mochkil.x, y: groundY}];
+            const targets = [{x: lori.x, y: loriJumpY}, {x: azul.x, y: loriJumpY}, {x: mochkil.x, y: canvas.height - GROUND_Y_POS - CHAR_SIZE}];
             targets.forEach(t => {
                 if (t.x < this.x + this.w && t.x + 80 > this.x && t.y < this.y + this.h && t.y + 80 > this.y) {
                     this.collected = true; 
-
-                      // TRIGGER ✨ HERE:
-    createBurst(this.x, this.y, '#00ffff'); // Cyan sparks for that cyberpunk feel
-    
-                    if (this.file.includes('snack-portal')) {
+                    let sparkColor = this.file.includes('credit_card_1') ? '#ffd700' : '#00ffff';
+                    createBurst(this.x, this.y, sparkColor); 
+                    if (this.file.includes('credit_card_1')) {
+                        score += 500; document.getElementById('status').innerText = "CREDIT INCREASED +500";
+                    } else if (this.file.includes('snack-portal')) {
                         handlePortalEntry();
                     } else {
                         score += 150; updateMenu(this.file);
                         if (!hasQuantumShield) {
-                            snackStreak++;
-                            document.getElementById('status').innerText = `REBOOTING: ${snackStreak}/5`;
+                            snackStreak++; document.getElementById('status').innerText = `REBOOTING: ${snackStreak}/5`;
                             if (snackStreak >= 5) { hasQuantumShield = true; snackStreak = 0; document.getElementById('status').innerText = "SHIELD RESTORED"; }
                         }
                     }
@@ -308,25 +270,17 @@ class GameObject {
 
 function handlePortalEntry() {
     if (isTransitioning) return;
-    isTransitioning = true;
-    shake = 50;
-    currentBiome = 'day';
-    portalFrame = frame;
-    score += 500;
-    gameObjects = []; 
-    baseSpeed = 9; 
-    gameSpeed = baseSpeed;
+    isTransitioning = true; shake = 50; currentBiome = 'day'; portalFrame = frame;
+    score += 500; gameObjects = []; baseSpeed = 9; gameSpeed = baseSpeed;
     document.getElementById('status').innerText = "SECTOR 2: THE BRIGHT SIDE";
     setTimeout(() => { isTransitioning = false; }, 2000);
 }
 
 function resetGame() {
-    score = 0; snackStreak = 0; gameObjects = []; 
-    baseSpeed = 6; gameSpeed = baseSpeed;
-    currentBiome = 'night'; isTransitioning = false;
-    frame = 0; gameState = 'PLAYING'; recentSnacks = []; jumpCount = 0; jumpHeight = 0; hasQuantumShield = true;
-    music.play().catch(() => {});
-    document.getElementById('recentMenu').innerHTML = '';
+    score = 0; snackStreak = 0; gameObjects = []; baseSpeed = 6; gameSpeed = baseSpeed;
+    currentBiome = 'night'; isTransitioning = false; frame = 0; gameState = 'PLAYING'; 
+    recentSnacks = []; jumpCount = 0; jumpHeight = 0; hasQuantumShield = true;
+    music.play().catch(() => {}); document.getElementById('recentMenu').innerHTML = '';
 }
 
 function handleJump() {
@@ -337,13 +291,8 @@ function handleJump() {
 window.addEventListener('mousedown', handleJump);
 window.addEventListener('touchstart', (e) => { if (e.target.id === 'gameCanvas') { e.preventDefault(); handleJump(); } }, { passive: false });
 
-// --- 🏞️ FIXED DRAW BACKGROUND ---
 function drawBackground() {
-    // 1. Sky Color
-    ctx.fillStyle = biomes[currentBiome].overlay; 
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    // 2. Twinkling Stars
+    ctx.fillStyle = biomes[currentBiome].overlay; ctx.fillRect(0, 0, canvas.width, canvas.height);
     ctx.fillStyle = "#fff";
     stars.forEach(s => {
         let twinkle = s.opacity * Math.abs(Math.sin(frame / 30 + s.x));
@@ -353,15 +302,8 @@ function drawBackground() {
         ctx.fillRect(starX, s.y, s.size, s.size);
     });
     ctx.globalAlpha = 1;
-
-    // 3. Buildings
     const b = biomes[currentBiome];
-    const layers = [
-        { src: b.bg, s: 0.2, op: 0.3, h: canvas.height },
-        { src: b.buildings[2], s: 0.8, op: 0.5, h: canvas.height * 0.8 },
-        { src: b.buildings[1], s: 1.5, op: 0.7, h: canvas.height * 0.6 },
-        { src: b.buildings[0], s: 2.5, op: 0.9, h: canvas.height * 0.4 }
-    ];
+    const layers = [{ src: b.bg, s: 0.2, op: 0.3, h: canvas.height }, { src: b.buildings[2], s: 0.8, op: 0.5, h: canvas.height * 0.8 }, { src: b.buildings[1], s: 1.5, op: 0.7, h: canvas.height * 0.6 }, { src: b.buildings[0], s: 2.5, op: 0.9, h: canvas.height * 0.4 }];
     layers.forEach(l => {
         if (assets[l.src] && assets[l.src].complete) {
             let xPos = -(frame * l.s) % canvas.width;
@@ -370,95 +312,49 @@ function drawBackground() {
             ctx.drawImage(assets[l.src], xPos + canvas.width, canvas.height - l.h - GROUND_Y_POS, canvas.width, l.h);
         }
     });
-
-    // 4. Floor
     ctx.globalAlpha = 1;
     if (assets['floor.png'] && assets['floor.png'].complete) {
         for (let i = 0; i < (canvas.width / 50) + 2; i++) {
             ctx.drawImage(assets['floor.png'], (-(frame * gameSpeed) % 50) + (i * 50), canvas.height - GROUND_Y_POS, 50, 100);
         }
     }
-} // <--- This bracket closes drawBackground correctly
+}
 
-// --- ✨ THE MISSING BURST FUNCTION ---
 function createBurst(x, y, color) {
     for (let i = 0; i < 12; i++) {
-        particles.push({
-            x: x, y: y,
-            vX: (Math.random() - 0.5) * 12,
-            vY: (Math.random() - 0.5) * 12,
-            life: 1.0,
-            color: color
-        });
+        particles.push({ x: x, y: y, vX: (Math.random() - 0.5) * 12, vY: (Math.random() - 0.5) * 12, life: 1.0, color: color });
     }
 }
 
-
-    function animate() {
-    // --- 1. PAUSE CHECK ---
-    if (isPaused) {
-        requestAnimationFrame(animate);
-        return; 
-    }
-
-    // --- 2. SCREEN SHAKE & CLEAR ---
+function animate() {
+    if (isPaused) { requestAnimationFrame(animate); return; }
     ctx.save();
-    if (shake > 0) {
-        ctx.translate((Math.random() - 0.5) * shake, (Math.random() - 0.5) * shake);
-        shake *= 0.9; if (shake < 0.5) shake = 0;
-    }
+    if (shake > 0) { ctx.translate((Math.random() - 0.5) * shake, (Math.random() - 0.5) * shake); shake *= 0.9; if (shake < 0.5) shake = 0; }
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    // --- 3. ENVIRONMENT & SCORE ---
-    drawBackground(); // This handles your day/night sky colors!
-
-    // --- NEW: RENDER ✨ PARTICLES ---
+    drawBackground();
     particles.forEach((p, i) => {
-        p.x += p.vX; 
-        p.y += p.vY; 
-        p.life -= 0.02; // Sparkles fade away slowly
-        ctx.globalAlpha = p.life;
-        ctx.fillStyle = p.color;
-        ctx.fillRect(p.x, p.y, 4, 4); // Small pixel sparks
+        p.x += p.vX; p.y += p.vY; p.life -= 0.02;
+        ctx.globalAlpha = p.life; ctx.fillStyle = p.color; ctx.fillRect(p.x, p.y, 4, 4);
         if (p.life <= 0) particles.splice(i, 1);
     });
-    ctx.globalAlpha = 1; // Reset transparency so the cats don't disappear!
-
-
-
+    ctx.globalAlpha = 1;
     if (gameState === 'PLAYING') {
         frame++;
-        // ... (rest of your logic for spawning obstacles and snacks)
-
-            const portalExists = gameObjects.some(obj => obj.file.includes('snack-portal'));
-            if (score >= 2000 && currentBiome === 'night' && !portalExists && !isTransitioning) {
-            let portal = new GameObject('snack');
-            portal.file = 'snack-portal.png';
-            portal.img.src = BASE_URL + portal.file;
-            gameObjects.push(portal);
+        const portalExists = gameObjects.some(obj => obj.file.includes('snack-portal'));
+        if (score >= 2000 && currentBiome === 'night' && !portalExists && !isTransitioning) {
+            let portal = new GameObject('snack'); portal.file = 'snack-portal.png'; portal.img.src = BASE_URL + portal.file; gameObjects.push(portal);
         }
-        if (frame % 80 === 0 && !portalExists) {
-            gameObjects.push(new GameObject(Math.random() > 0.4 ? 'obstacle' : 'snack'));
-        }
-        if (isJumping) {
-            jumpHeight -= yVelocity; yVelocity += gravity;
-            if (jumpHeight <= 0) { jumpHeight = 0; isJumping = false; jumpCount = 0; }
-        }
+        if (frame % 80 === 0 && !portalExists) { gameObjects.push(new GameObject(Math.random() > 0.4 ? 'obstacle' : 'snack')); }
+        if (isJumping) { jumpHeight -= yVelocity; yVelocity += gravity; if (jumpHeight <= 0) { jumpHeight = 0; isJumping = false; jumpCount = 0; } }
         gameObjects.forEach((obj, i) => { obj.update(); if (obj.x < -300) gameObjects.splice(i, 1); });
         document.getElementById('scoreDisplay').innerText = `SCORE: ${score}`;
     }
-
     lori.draw(); azul.draw(); mochkil.draw();
-
     if (isTransitioning) {
         let alpha = 1 - (frame - portalFrame) / 60;
-        if (alpha > 0) {
-            ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-        }
+        if (alpha > 0) { ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`; ctx.fillRect(0, 0, canvas.width, canvas.height); }
     }
     ctx.restore();
-
     if (gameState !== 'PLAYING') {
         ctx.fillStyle = "rgba(0,0,0,0.8)"; ctx.fillRect(0,0,canvas.width,canvas.height);
         ctx.fillStyle = "#0ff"; ctx.textAlign = "center"; ctx.font = "24px Courier";
@@ -468,8 +364,8 @@ function createBurst(x, y, color) {
     requestAnimationFrame(animate);
 }
 animate();
-
 </script>
+
 
 
 
